# mcp-for-file-managment

./: .1mcprc  .1mcprc.docker  .1mcprc.simple  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py  start-mcp-system.sh  stop-mcp-system.sh
mcp-interpreter-server/: PROBLEM_SOLVED.md  mcp-config.json  pyproject.toml  server.py
parse-pdf/: pyproject.toml  schemas.json  server.py
