[project]
name = "mcp-runtime-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.17.0",
    "py-solc-x>=2.0.4",
    "pytest>=8.4.2",
    "slither-analyzer>=0.11.3",
    "platformdirs>=4.0.0",
    "jsonpointer>=3.0.0",
    "chromadb>=1.1.1",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]
