[project]
name = "parse-pdf"
version = "0.1.0"
description = "MCP server for parsing PDF files from GitHub repositories"
authors = [
    {name = "Evgenij Zdarkin", email = "evgenij@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.17.0",
    "requests>=2.31.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.9.0",
    "pymupdf>=1.23.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
